Editing public poole.css

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -35,7 +35,7 @@
  * Update the foundational and global aspects of the page.
  */
 
-* {
+ * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
@@ -60,7 +60,7 @@ html {
 
 body {
   color: #515151;
-  background-color: #eddcee;
+  background-color: #bbb9bb;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
